chore: 安装 vue，用于代码提示

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "less": "^4.4.2",
-    "vitepress": "2.0.0-alpha.12"
+    "vitepress": "2.0.0-alpha.12",
+    "vue": "3.5.22"
   }
 }
