--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "less": "4.4.2",
     "vitepress": "2.0.0-alpha.12",
     "vue": "3.5.22"
+  },
+  "dependencies": {
+    "@frost-utils/javascript": "^2.1.3"
   }
 }
