--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "3.5.22"
   },
   "dependencies": {
-    "@frost-utils/javascript": "^2.1.3"
+    "@frost-utils/javascript": "^2.1.3",
+    "artalk": "^2.9.1"
   }
 }
